[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
# Import mode: https://docs.pytest.org/en/stable/pythonpath.html#pythonpath
addopts = "--color=yes"
filterwarnings = ""
log_cli = 1

#  Uncomment the following `log_cli` lines if you'd like to enable logs in testing.
#  log_cli = 1
#  By setting cli_level to `100`, we hide most logs by default (for reference 'CRITICAL' is 50).
#  Change log_cli_level to `DEBUG` or `INFO` if you'd to capture info logs as well.
#  e.g.
#  log_cli_level = INFO
log_cli_level = 100
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

python_files = "test_*.py"
python_functions = "*_test test_*"

norecursedirs = "site-packages"

testpaths = "src/tests/"
