[metadata]
name = poretitioner
home-page = https://github.com/uwmisl/

[pydocstyle]
convention = numpy
match-dir = (?!tests)(?!resources)(?!docs)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py
inherit = false

[flake8]
max-line-length = 120
doctests = True
exclude =  .git, .eggs, __pycache__, tests/, docs/, classification/, concentration/, nanopore_experiments
