[metadata]
name = poretitioner
home-page = https://github.com/uwmisl/
description = Software for reading peptide signatures.
long_description = file: README.md, CHANGELOG.rst, LICENSE.md
keywords = nanopore, nanopores, peptide, peptides, protein, proteins, DNA
license_file = LICENSE.md
classifiers =
    Development Status :: 2 - Pre-Alpha,
    Environment :: Console,
    Intended Audience :: Science/Research,
    License :: OSI Approved :: MIT License,
    Operating System :: MacOS,
    Operating System :: POSIX,
    Operating System :: Unix,
    Programming Language :: Python,
    Programming Language :: Python :: 3,
    Programming Language :: Python :: 3.6,
    Programming Language :: Python :: 3.7,
    Programming Language :: Python :: 3.8,
    Programming Language :: Python :: 3.9,
    Topic :: Scientific/Engineering,
    Topic :: Software Development,

[options]
zip_safe = False
packages = find:
include_package_data = True

[options.package_data]
poretitioner = *.json

[options.entry_points]
console_scripts =
    poretitioner = poretitioner.poretitioner:main

[options.extras_require]
pdf = ReportLab>=1.2; RXP
rest = docutils>=0.3; pack ==1.1, ==1.3

[pydocstyle]
convention = numpy
match-dir = (?!tests)(?!resources)(?!docs)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py
inherit = false

[flake8]
max-line-length = 120
doctests = True
exclude = .git, .eggs, __pycache__, tests/, docs/, classification/, concentration/, nanopore_experiments
