[metadata]
name = poretitioner
home-page = https://github.com/uwmisl/
description = Software for reading peptide signatures.
long_description = file: README.md, CHANGELOG.rst, LICENSE.md
keywords = nanopore, nanopores, peptide, peptides, protein, proteins, DNA
license_file = LICENSE.md
classifiers =
    Development Status :: 2 - Pre-Alpha,
    Environment :: Console,
    Intended Audience :: Science/Research,
    License :: OSI Approved :: MIT License,
    Operating System :: MacOS,
    Operating System :: POSIX,
    Operating System :: Unix,
    Programming Language :: Python,
    Programming Language :: Python :: 3,
    Programming Language :: Python :: 3.6,
    Programming Language :: Python :: 3.7,
    Programming Language :: Python :: 3.8,
    Programming Language :: Python :: 3.9,
    Topic :: Scientific/Engineering,
    Topic :: Software Development,

[options]
zip_safe = False
# "You can think of find_namespace: as identical to find: except it would count a directory as a package even if it doesn’t contain __init__.py file directly. "
# https://setuptools.readthedocs.io/en/latest/userguide/package_discovery.html#using-find-namespace-or-find-namespace-packages
package_dir =
    = src
packages = find:

[options.packages.find]
where = src
        .

# package_dir =
#     =src
# packages = find:
include_package_data=True
# [options.packages.find]
# include =
#     =poretitioner
# exclude = tests

[options.package_data]
* = *.md
    *.toml
    *.txt
    *.gif
    *.json
    *.fast5
    *.txt.gz
    *.pt # PyTorch models
    .sav # Sci-kit learn models.

[options.entry_points]
poretitioner=
    poretitioner = poretitioner:poretitioner
example_app=
    example_app = example_app:__main__
console_scripts =
    poretitioner = poretitioner:__main__
    example = example_app:__main__

[options.extras_require]
pdf = ReportLab>=1.2; RXP
rest = docutils>=0.3; pack ==1.1, ==1.3

[pydocstyle]
convention = numpy
match-dir = (?!tests)(?!resources)(?!docs)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py
inherit = false

[flake8]
max-line-length = 120
doctests = True
exclude = .git, .eggs, __pycache__, src/tests/, docs/, classification/, concentration/, nanopore_experiments
